[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-rag-system"
version = "1.0.0"
description = "Advanced RAG system with contextual compression using LangGraph and Streamlit"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    # Core AI/ML frameworks
    "langchain>=0.1.0",
    "langchain_ollama",
    "langchain-huggingface>=0.0.3",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.30",
    
    # Embeddings and vector storage
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "transformers>=4.21.0",
    "torch>=2.0.0",
    
    # Document processing
    "pypdf>=3.0.0",
    "docx2txt>=0.8",
    
    # Web interface
    "streamlit>=1.28.0",
    
    # Utilities
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# Performance (GPU support)
gpu = [
    "faiss-gpu>=1.7.2",  # Fixed version constraint
]

# Additional document formats
formats = [
    "python-pptx>=0.6.21",
    "python-magic>=0.4.27",
]

[project.scripts]
rag-app = "app:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line-length = 88